Bug 39415 - Painting of collapsing table borders broken in Writer
Summary: Painting of collapsing table borders broken in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3 tar...
Keywords: regression
: 43313 46322 50535 (view as bug list)
Depends on:
Blocks: mab3.5 44768
  Show dependency treegraph
 
Reported: 2011-07-20 23:51 UTC by andre
Modified: 2012-08-20 20:44 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Original MS word document (44.00 KB, application/msword)
2011-07-20 23:51 UTC, andre
Details
Correct PDF save of the doc file (19.37 KB, application/x-crossover-pdf)
2011-07-20 23:52 UTC, andre
Details
Printscreen of ms word 2007 showing the document (28.46 KB, image/png)
2011-07-20 23:52 UTC, andre
Details
Openoffice 3.3.0 also showing them correctly (28.39 KB, image/png)
2011-07-20 23:53 UTC, andre
Details
Libreoffice 3.4.2 showing the incorrect borders (30.50 KB, image/png)
2011-07-20 23:53 UTC, andre
Details
LibreOffice 3.5.0 Beta1 (51.86 KB, image/png)
2011-12-23 13:36 UTC, andre
Details
ODF bugdoc for same problem as original WW8 bugdoc (9.13 KB, application/vnd.oasis.opendocument.text)
2012-06-28 02:33 UTC, Michael Stahl
Details
bugdoc for OOo issue i9860 (8.82 KB, application/vnd.oasis.opendocument.text)
2012-06-28 02:35 UTC, Michael Stahl
Details
bugdoc with vertical text direction (9.41 KB, application/vnd.oasis.opendocument.text)
2012-06-28 02:36 UTC, Michael Stahl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andre 2011-07-20 23:51:34 UTC
Created attachment 49361 [details]
Original MS word document

The following document created in word 2003 displays correctly in all MS word versions.
Openoffice 3.3.0 also shows it correctly.

In libre office the borders are shown in incorrect places
Comment 1 andre 2011-07-20 23:52:09 UTC
Created attachment 49362 [details]
Correct PDF save of the doc file
Comment 2 andre 2011-07-20 23:52:43 UTC
Created attachment 49363 [details]
Printscreen of ms word 2007 showing the document
Comment 3 andre 2011-07-20 23:53:11 UTC
Created attachment 49364 [details]
Openoffice 3.3.0 also showing them correctly
Comment 4 andre 2011-07-20 23:53:42 UTC
Created attachment 49365 [details]
Libreoffice 3.4.2 showing the incorrect borders
Comment 5 Björn Michaelsen 2011-12-23 12:25:38 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 6 andre 2011-12-23 13:36:34 UTC
Created attachment 54758 [details]
LibreOffice 3.5.0 Beta1

Bug still present in 3.5.0 beta 1
Comment 7 sasha.libreoffice 2012-01-30 02:41:03 UTC
reproduced in LibO 3.6.0 master 2233aa5-9eed775-f061262 on Fedora 64 bit
and in 3.4.3 on Windows XP 32 bit
but not reproducible in 3.3.4, therefore regression
Guess that appears in 3.4.0
Comment 8 sasha.libreoffice 2012-01-30 02:43:33 UTC
@ Cedric
Please, look at this regression
Comment 9 Rainer Bielefeld Retired 2012-01-30 03:39:33 UTC
This one looks related to "Bug 38542 - FORMATTING TABLE double borders incompatibility with old LibO / OOo Versions"

@Cédric:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 10 Cor Nouws 2012-02-06 11:23:40 UTC
Michael,
Since you worked on boarders, it's maybe easy for you to judge this one ?
Thanks - Cor
Comment 11 Michael Meeks 2012-05-04 02:45:09 UTC
persists in 3.6 / master.
Comment 12 Michael Stahl 2012-06-26 12:57:51 UTC
reverting a0486f02433703744f487e599422714d03937956 makes
a huge difference, though it still looks worse than it used to.

Cedric, what problem does that commit solve?
Comment 13 Michael Stahl 2012-06-27 01:19:02 UTC
sigh... revert fields that changed themselves...
Comment 14 Michael Stahl 2012-06-28 02:29:47 UTC
so i've found out what the problem is that  a0486f02433703744f487e599422714d03937956 tried to solve:

for collapsing table borders the horizontal border lines are not
centered on the line, but "below" the line.  the commit tried
to achieve this, but did it wrongly which caused the awful
displaced/double painting of the border that can be seen in
the bugdoc.

this is a painting problem and has nothing to do with WW8.

i'll push the fix to master later today...

also i've noticed that there's a special case hack for
OOo issue 9860 that also needs to be adapted, and that
a table in a page with vertical text direction needs to be
tweaked in yet another different way.
Comment 15 Michael Stahl 2012-06-28 02:33:14 UTC
Created attachment 63553 [details]
ODF bugdoc for same problem as original WW8 bugdoc
Comment 16 Michael Stahl 2012-06-28 02:35:21 UTC
Created attachment 63554 [details]
bugdoc for OOo issue i9860

the important border is the top border of the first cell
on the second page, which does not actually exist but
is faked from the bottom border of the cell.
Comment 17 Michael Stahl 2012-06-28 02:36:15 UTC
Created attachment 63555 [details]
bugdoc with vertical text direction
Comment 18 Not Assigned 2012-06-28 05:20:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aa8240e80394887a4af45710de69aacacec66d25

fdo#39415: sw: fix collapsing border painting:
Comment 19 Not Assigned 2012-06-28 05:20:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3a4b7c3555f2ffb4e89502bb04ff063d8c08f628

fdo#39415: sw: fix collapsing border painting more:
Comment 20 Not Assigned 2012-06-28 05:21:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0bbbfdef6b31650a351883de09b5338562048a2

fdo#39415: sw: fix vertical collapsing border painting:
Comment 21 Not Assigned 2012-06-28 05:27:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=426dec966e09c0a43d00b80a4bd262d64ea208ee&g=libreoffice-3-6

fdo#39415: sw: fix collapsing border painting:


It will be available in LibreOffice 3.6.
Comment 22 Not Assigned 2012-06-28 05:28:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aee5c2ec17ffdfacc9190f6467d7ecc291ac8e3d&g=libreoffice-3-6

fdo#39415: sw: fix collapsing border painting more:


It will be available in LibreOffice 3.6.
Comment 23 Not Assigned 2012-06-28 05:28:33 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=91b6ab615b4f72832412b4f4a8c633f93952a17f&g=libreoffice-3-6

fdo#39415: sw: fix vertical collapsing border painting:


It will be available in LibreOffice 3.6.
Comment 25 Michael Stahl 2012-08-10 16:42:56 UTC
*** Bug 46322 has been marked as a duplicate of this bug. ***
Comment 26 Michael Stahl 2012-08-20 18:07:44 UTC
*** Bug 43313 has been marked as a duplicate of this bug. ***
Comment 27 Michael Stahl 2012-08-20 20:44:56 UTC
*** Bug 50535 has been marked as a duplicate of this bug. ***