fdo#39415: sw: fix collapsing border painting:

In a table with collapsing borders, the horizontal borders  need to be
painted "below" the reference line, and not "centered" on the line like
the vertical borders.
a0486f02433703744f487e599422714d03937956 was apparently an attempt to
fix this, but unfortunately it adjusted both top and bottom borders
with the top border width, which has horrible results if the top and
bottom borders have different widths.

Change-Id: I7605eda6ef8111612ceb1ded79c0811de9ca7b25
(cherry picked from commit aa8240e80394887a4af45710de69aacacec66d25)

Signed-off-by: Michael Stahl <mstahl@redhat.com>